--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@tanstack/react-query": "4.3.0-beta.4",
+    "@tanstack/react-query-devtools": "4.3.0-beta.7"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
